--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,11 @@ phases:
   build:
     commands:
       - echo ****** TESTING OUR TEMPLATE ****** 
-      - cfn-lint cheetah-network-template.yaml
+      - cfn-lint cheetah-network-template.yaml  cheetah-lifecycle.yaml
       - echo ****** Build cloudformation template started on `date` ******
       - aws cloudformation package --template-file cheetah-network-template.yaml --s3-bucket cheetah.nasfinancialgroup.com  --output-template-file outputTemplate.yaml 
+      - aws cloudformation package --template-file cheetah-lifecycle.yaml --s3-bucket cheetah.nasfinancialgroup.com  --output-template-file outputTemplate.yaml 
+      
   post_build:
     commands:
       - echo Build completed on `date`
@@ -25,3 +27,9 @@ artifacts:
   files:
     - cheetah-network-template.yaml
     - outputTemplate.yaml
+  discard-paths: yes
+  secondary-artifacts:
+    artifact1:
+      files:  
+        - cheetah-lifecycle.yaml
+      discard-paths: yes  
