--- a/cheetah-network-template.yaml
+++ b/cheetah-network-template.yaml
@@ -36,7 +36,10 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.0.0/18
-      AvailabilityZone: "eu-west-2b"
+      AvailabilityZone: !Select 
+        - 0
+        - !GetAZs 
+          Ref: 'AWS::Region'
       Tags:
       - Key: Name
         Value: Public-1
@@ -46,7 +49,10 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.64.0/18
-      AvailabilityZone: "eu-west-2c"
+      AvailabilityZone: !Select 
+        - 0
+        - !GetAZs 
+          Ref: 'AWS::Region'
       Tags:
       - Key: Name
         Value: Public-2
