--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,15 +15,18 @@ phases:
   build:
     commands:
       - echo ****** TESTING OUR TEMPLATE ****** 
-      - cfn-lint cheetah-network-template.yaml 
+      - cfn-lint cheetah-network-template.yaml  intranet.yaml
       - echo ****** Build cloudformation template started on `date` ******
       - aws cloudformation package --template-file cheetah-network-template.yaml --s3-bucket cheetah.nasfinancialgroup.com  --output-template-file outputTemplate.yaml 
+      - aws cloudformation package --template-file intranet.yaml --s3-bucket cheetah.nasfinancialgroup.com  --output-template-file output1Template.yaml
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
+    - intranet.yaml
     - cheetah-network-template.yaml
     - outputTemplate.yaml
+    - output1Template.yaml
 
    
