--- a/intranet.yaml
+++ b/intranet.yaml
@@ -77,6 +77,7 @@ Resources:
     Properties:
       InstanceType: t2.micro
       ImageId: ami-073bb7464cc51df7c
+      KeyName: rosaria-cheetah-key
       NetworkInterfaces:
         - AssociatePublicIpAddress: 'true'
           DeviceIndex: '0'
@@ -323,7 +324,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
       - !Ref ServerSecurityGroup1
-      ImageId: ami-06f737d805edd92fb
+      ImageId: ami-0e0cb8987fa0fc09d
       # UserData:
       #   Fn::Base64: !Sub |
       #     #!/bin/bash -xe
